[findbugs] unnecessary double conversion
git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/trunk/carrot2@1488 7ff1d41c-760d-0410-a7ff-a3a56f310b35