@@ -74,10 +74,9 @@ public class QuerySaveDialog
             dialog.setModal(true);
             dialog.getContentPane().add(buildUI());
             dialog.pack();
-            dialog.setLocation((int) (owner.getLocation().getX() + (owner
-                .getWidth() - dialog.getWidth()) / 2),
-                (int) (owner.getLocation().getY() + (owner.getHeight() - dialog
-                    .getHeight()) / 2));
+            dialog.setLocation(
+                (owner.getLocation().x + (owner.getWidth() - dialog.getWidth()) / 2),
+                (owner.getLocation().y + (owner.getHeight() - dialog.getHeight()) / 2));
 
             SwingUtils.addEscapeKeyCloseAction(dialog);
         }
@@ -218,7 +217,7 @@ public class QuerySaveDialog
             new File(fileName.getText()));
         requestParams.put(
             SaveXmlFilterComponent.PARAM_SAVE_CLUSTERS,
-            new Boolean(saveClusters.isSelected()));
+            Boolean.valueOf(saveClusters.isSelected()));
 
         try
         {
